[DevTools] fixed crash on stepIntoAsync fetch

Network should not be intsrumented with JavaScript AsyncTask
instrumentation since it does not trigger JS execution explicitly.

R=pfeldman@chromium.org

Bug: chromium:840502
Change-Id: I07a939b7f583b0330fa40afb0326a40e58918547
Reviewed-on: https://chromium-review.googlesource.com/1049107
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#556673}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: af27f53e066caf431f7999c9069aca1c4f374f62