front_end/sources_test_runner/DebuggerTestRunner.js
@@ -219,6 +219,12 @@ SourcesTestRunner.stepInto = function() {
   });
 };
 
+SourcesTestRunner.stepIntoAsync = function() {
+  Promise.resolve().then(function() {
+    UI.panels.sources._stepIntoAsync();
+  });
+};
+
 SourcesTestRunner.stepOut = function() {
   Promise.resolve().then(function() {
     UI.panels.sources._stepOut();
